import Name from "../../../src/pages/claims/name";
import React from "react";
import User from "../../../src/models/User";
import { shallow } from "enzyme";
import usersApi from "../../../src/api/usersApi";

jest.mock("../../../src/api/usersApi");

describe("Name", () => {
  let setUser, user, wrapper;
  const claim_id = "12345";

  beforeEach(() => {
    user = new User();
    setUser = jest.fn();
    wrapper = shallow(
      <Name user={user} setUser={setUser} query={{ claim_id }} />
    );
  });

  it("renders the empty page", () => {
    expect(wrapper).toMatchSnapshot();
  });

  it("renders the page prefilled with user information", () => {
    user = new User({
      first_name: "Aquib",
      middle_name: "cricketer",
      last_name: "Khan",
    });
    wrapper = shallow(
      <Name user={user} setUser={setUser} query={{ claim_id }} />
    );
    expect(wrapper).toMatchSnapshot();
  });

  describe("when the form is successfully submitted", () => {
    it("calls updateUser and updates the state", async () => {
      expect.assertions();

      await wrapper.find("QuestionPage").simulate("save");

      expect(usersApi.updateUser).toHaveBeenCalledTimes(1);
      expect(setUser).toHaveBeenCalledWith(expect.any(User));
    });
  });
});
