// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name renders the empty page 1`] = `
<QuestionPage
  formState={
    User {
      "cognito_user_id": null,
      "date_of_birth": null,
      "first_name": null,
      "has_state_id": null,
      "last_name": null,
      "middle_name": null,
      "ssn_or_itin": null,
      "state_id": null,
      "status": null,
      "user_id": null,
    }
  }
  nextPage="/claims/date-of-birth?claim_id=12345"
  onSave={[Function]}
  title="Who is taking leave"
>
  <FormLabel
    component="legend"
    hint="Fill out your name as it appears on official documents like your driver’s license or W-2."
  >
    What's your name?
  </FormLabel>
  <InputText
    label="First name"
    name="first_name"
    onChange={[Function]}
    smallLabel={true}
    value=""
  />
  <InputText
    label="Middle name"
    name="middle_name"
    onChange={[Function]}
    optionalText="(optional)"
    smallLabel={true}
    value=""
  />
  <InputText
    label="Last name"
    name="last_name"
    onChange={[Function]}
    smallLabel={true}
    value=""
  />
</QuestionPage>
`;

exports[`Name renders the page prefilled with user information 1`] = `
<QuestionPage
  formState={
    User {
      "cognito_user_id": null,
      "date_of_birth": null,
      "first_name": "Aquib",
      "has_state_id": null,
      "last_name": "Khan",
      "middle_name": "cricketer",
      "ssn_or_itin": null,
      "state_id": null,
      "status": null,
      "user_id": null,
    }
  }
  nextPage="/claims/date-of-birth?claim_id=12345"
  onSave={[Function]}
  title="Who is taking leave"
>
  <FormLabel
    component="legend"
    hint="Fill out your name as it appears on official documents like your driver’s license or W-2."
  >
    What's your name?
  </FormLabel>
  <InputText
    label="First name"
    name="first_name"
    onChange={[Function]}
    smallLabel={true}
    value="Aquib"
  />
  <InputText
    label="Middle name"
    name="middle_name"
    onChange={[Function]}
    optionalText="(optional)"
    smallLabel={true}
    value="cricketer"
  />
  <InputText
    label="Last name"
    name="last_name"
    onChange={[Function]}
    smallLabel={true}
    value="Khan"
  />
</QuestionPage>
`;
